# Object_ChatGPT_MININEC_ver_2

./: CMakeLists.txt  frequencyInput.cpp  frequencyInput.hpp  main.cpp  mininec3_compat.cpp  mininec3_compat.hpp  mininec3_loader.cpp  mininec3_loader.hpp  mininec3_state.hpp  vec3.hpp
